objects/tffa__Address__c.object
<CustomObject>
    <description>An address is a collection of information, presented in a mostly fixed format, used to give the location of a building, apartment, or other structure or a plot of land, generally using political boundaries and street names as references,  along with other identifiers such as house or apartment numbers

 For more reference lookup https://en.wikipedia.org/wiki/Address_(geography)#United_States</description>
    <fields>
        <fullName>tffa__CensusTract__c</fullName>
        <description>The census tract as designated by the Census Bureau.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Census Tract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__City__c</fullName>
        <description>The city of the address</description>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Country__c</fullName>
        <description>Country of the address</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AddressCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__County__c</fullName>
        <description>A county is a geographical region of a country used for administrative or political purposes,</description>
        <encryptionScheme>None</encryptionScheme>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DeliveryPointIdentifier__c</fullName>
        <description>(DPID), encodes the destination of the mail, examples USPS General Delivery Point ,</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Point Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FormattedAddress__c</fullName>
        <description>Formatted address in USPS format</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Formatted address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__GeoCoordinate__c</fullName>
        <description>Specifies the precise geolocation of the address. Typically, address search providers will provide an address’s latitude and longitude coordinates.</description>
        <label>Geo Coordinate</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>tffa__GeocodeAccuracy__c</fullName>
        <description>Accuracy level of the geocode for the address. Typically, geocoding service providers provide accuracy data for an address’s latitude and longitude coordinates.</description>
        <label>Geocode Accuracy</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Line1__c</fullName>
        <description>line 1 of the address</description>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Line1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Line2__c</fullName>
        <description>line 2 of the address</description>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Line3__c</fullName>
        <description>line 3 of the address</description>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__State__c</fullName>
        <description>A state is a geographical region of a country used for administrative or political purposes,</description>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__UnitIdentifierType__c</fullName>
        <description>Specifies a further level of detail for a street address, for example, Suite or Unit. This list is based on the USPS Publication 28 on Postal Addressing Standards with the addition of Condo based on mortgage industry need.</description>
        <label>Unit identifier type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PropertyDesignatorType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__UnitIdentifier__c</fullName>
        <description>The identifier value associated with the Secondary Address Unit Designator</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Unit identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ZipCode__c</fullName>
        <description>Also known as post code , a series of numbers that forms part of an address, used to help organize post so that it can be delivered more quickly</description>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <nameField>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>